[workspace]

default-members = [
  "examples",
  "gdk4",
  "gdk4/sys",
  "gsk4",
  "gsk4/sys",
  "gtk4",
  "gtk4/sys",
  "gtk4-macros",
]


members = [
  "examples",
  "gdk4",
  "gdk4/sys",
  "gdk4-x11",
  "gdk4-x11/sys",
  "gdk4-wayland",
  "gdk4-wayland/sys",
  "gsk4",
  "gsk4/sys",
  "gtk4",
  "gtk4/sys",
  "gtk4-macros",
]

exclude = ["checker", "gir", "book/listings"]

[patch."https://github.com/gtk-rs/gtk-rs-core"]
glib-sys = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
gobject-sys = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
glib = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
gio-sys = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
gio = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
pango-sys = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
pango = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
pangocairo-sys = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
pangocairo = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
cairo-rs = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
cairo-sys-rs = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
gdk-pixbuf-sys = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
gdk-pixbuf = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
glib-build-tools = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
graphene-sys = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
graphene-rs = { git = "https://github.com/sdroege/gtk-rs-core", branch = "impl-trait-without-object-reference" }
